--- a/.gitignore
+++ b/.gitignore
@@ -1,114 +1,40 @@
-### JetBrains template
-# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio
+#Maven
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+release.properties
+*.jar
 
-*.iml
-
-## Directory-based project format:
-.idea/
-.DS_Store
-# if you remove the above rule, at least ignore the following:
-
-# User-specific stuff:
-# .idea/workspace.xml
-# .idea/tasks.xml
-# .idea/dictionaries
-
-# Sensitive or high-churn files:
-# .idea/dataSources.ids
-# .idea/dataSources.xml
-# .idea/sqlDataSources.xml
-# .idea/dynamic.xml
-# .idea/uiDesigner.xml
-
-# Gradle:
-# .idea/gradle.xml
-# .idea/libraries
-
-# Mongo Explorer plugin:
-# .idea/mongoSettings.xml
-
-## File-based project format:
-*.ipr
-*.iws
-
-## Plugin-specific files:
+# Eclipse
+.project
+.classpath
+.settings/
+bin/
 
 # IntelliJ
-/out/
+.idea
+*.ipr
+*.iml
+*.iws
 
-# mpeltonen/sbt-idea plugin
-.idea_modules/
+# NetBeans
+nb-configuration.xml
 
-# JIRA plugin
-atlassian-ide-plugin.xml
-
-# Crashlytics plugin (for Android Studio and IntelliJ)
-com_crashlytics_export_strings.xml
-crashlytics.properties
-crashlytics-build.properties
-### Java template
-*.class
-target/
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-#*.jar
-*.war
-*.ear
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-### Eclipse template
-*.pydevproject
-.metadata
-.gradle
-bin/
-tmp/
-*.tmp
-*.bak
-*.swp
-*~.nib
-local.properties
-.settings/
-.loadpath
-
-# Eclipse Core
-.project
-
-# External tool builders
-.externalToolBuilders/
-
-# Locally stored "Eclipse launch configurations"
-*.launch
-
-# CDT-specific
-.cproject
-
-# JDT-specific (Eclipse Java Development Tools)
-.classpath
-
-# Java annotation processor (APT)
+# Visual Studio Code
+.vscode
 .factorypath
 
-# PDT-specific
-.buildpath
+# OSX
+.DS_Store
 
-# sbteclipse plugin
-.target
+# Vim
+*.swp
+*.swo
 
-# TeXlipse plugin
-.texlipse
+# patch
+*.orig
+*.rej
 
-# Created by .ignore support plugin (hsz.mobi)
-
-
-*.log
-*.log.gz
-/docs/.asciidoctor/
-
-.bundle
-/docs/diagrams/
-pom.xml.releaseBackup
-release.properties
+# Local environment
+.env
