--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,10 @@
+"%dev":
+   quarkus:
+     datasource:
+       jdbc:
+         url: jdbc:tracing:postgresql://localhost:5432/postgres
+     jaeger:
+       endpoint: http://localhost:14268/api/traces
 quarkus:
   flyway:
     migrate-at-start: true
@@ -6,7 +13,7 @@ quarkus:
     username: postgres
     password: postgres
     jdbc:
-      url: jdbc:tracing:postgresql://localhost:5432/postgres
+      url: jdbc:tracing:postgresql://postgres:5432/postgres
       driver: io.opentracing.contrib.jdbc.TracingDriver
     metrics:
       enabled: true
