--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>io.microgen</groupId>
-    <artifactId>myservice</artifactId>
+    <groupId>org.acme</groupId>
+    <artifactId>todo</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
         <jdk.version>11</jdk.version>
