--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>io.microgen</groupId>
-    <artifactId>myservice</artifactId>
+    <groupId>org.acme</groupId>
+    <artifactId>todo</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
         <jdk.version>11</jdk.version>
@@ -68,8 +68,8 @@
         <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-resteasy-jackson</artifactId>
-            <version>1.12.0.CR1</version>
         </dependency>
+
         <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-logging-json</artifactId>
@@ -164,30 +164,6 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.openapitools</groupId>
-                <artifactId>openapi-generator-maven-plugin</artifactId>
-                <version>4.3.1</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                        <configuration>
-                            <generateModelTests>false</generateModelTests>
-                            <inputSpec>${project.basedir}/src/main/resources/META-INF/openapi.yml</inputSpec>
-                            <generatorName>org.openapitools.codegen.languages.MicroGen</generatorName>
-                        </configuration>
-                    </execution>
-                </executions>
-                <dependencies>
-                    <dependency>
-                        <groupId>io.microgen</groupId>
-                        <artifactId>microgen-codegen</artifactId>
-                        <version>0.1.0-SNAPSHOT</version>
-                    </dependency>
-                </dependencies>
             </plugin>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
